--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       ; span style="margin-left:80px;">Change
       Password</span></button>
     <button type="button" id="showModal" class="btn btn-outline-secondary" data-toggle="modal" data-target="#displayPastGamesModal"
-      ; span style="margin-left:70px">Display
+      ; span style="margin-left:400px">Display
       Past Games</span></button>
-    <!-- <button id='newGameButton' ; class="btn btn-outline-secondary" ; span style="margin-left:80px">New Game</span></button> -->
     <button onClick='beginGame()' id="reset-btn" class="btn btn-outline-secondary" span style="margin-left:80px">Reset</span></button>
     <button onClick='beginGame()' id="new-game-btn" class="btn btn-outline-secondary" span style="margin-left:80px">New Game</span></button>
   </header>
@@ -227,11 +226,10 @@
           </video>
         </div>
         <!-- Audio Song in a Loop -->
-        <!-- <div class='audio'>
-          <audio controls loop>
-            <iframe src="https://freemusicdownloads.world/songs/all-of-me/?player=1785"></iframe>
+        <div class='audio'>
+            <iframe width="100%" height="300" frameborder="no" src="https://freemusicdownloads.world/songs/all-of-me/?player=1785"></iframe>
           </audio>
-        </div> -->
+        </div>
       </section>
     </div>
   </div>
