fix header fade

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
   <!-- Do not add `script` tags-->
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
   <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+
+    <style>
+
+      .header {
+    -webkit-animation: pulse 40s infinite alternate;
+    /* background: gray; */
+    border-radius: 100px;
+    color: orangered;
+}
+     /* Safari 4.0 - 8.0 */
+   @-webkit-keyframes pulse {
+    0% {background-color: rgba(0,0,0,0.2);}
+    10% {background-color: rgba(0,0,0,0.4);}
+    20% {background-color: rgba(0,0,0,0.6);}
+    30% {background-color: rgba(0,0,0,0.8);}
+    40% {background-color: rgba(0,0,0,0.6);}
+    50% {background-color: rgba(0,0,0,0.4);}
+    30% {background-color: rgba(0,0,0,0.2);}
+    80% {background-color: rgba(0,0,0,0.4);}
+    100% {background-color: rgba(0,0,0,0.6);}
+ }
+ /* Standard syntax */
+ @keyframes example {
+     from {background-color: lightgray;}
+     to {background-color: lightgray;}
+ }
+    </style>
+
 </head>
 
 <body>
