--- a/index.html
+++ b/index.html
@@ -52,14 +52,18 @@
     <button type="button" id="sign-out-btn" class="btn btn-outline-secondary" data-toggle="modal" data-target="#signOutModal" ;
       span style="margin-left:80px;">Sign
       Out</span></button>
-    <button type="button" id="password-btn" class="btn btn-outline-secondary" data-toggle="modal" data-target="#changePasswordModal"
+    
+      <!-- <button type="button" id="password-btn" class="btn btn-outline-secondary" data-toggle="modal" data-target="#changePasswordModal"
       ; span style="margin-left:80px;">Change
-      Password</span></button>
-    <button type="button" id="showModal" class="btn btn-outline-secondary" data-toggle="modal" data-target="#displayPastGamesModal"
+      Password</span></button> -->
+    
+      <!-- <button type="button" id="showModal" class="btn btn-outline-secondary" data-toggle="modal" data-target="#displayPastGamesModal"
       ; span style="margin-left:400px">Display
-      Past Games</span></button>
-    <button onClick='beginGame()' id="reset-btn" class="btn btn-outline-secondary" span style="margin-left:80px">Reset</span></button>
-    <button onClick='beginGame()' id="new-game-btn" class="btn btn-outline-secondary" span style="margin-left:80px">New Game</span></button>
+      Past Games</span></button> -->
+
+    <!-- <button onClick='beginGame()' id="reset-btn" class="btn btn-outline-secondary" span style="margin-left:80px">Reset</span></button> -->
+   
+    <!-- <button onClick="JS.beginGame()" id="new-game-btn" class="btn btn-outline-secondary" span style="margin-left:80px">New Game</span></button> -->
   </header>
 
   <!-- Sign up Button -->
